--- a/kivy-rc/main.kv
+++ b/kivy-rc/main.kv
@@ -190,7 +190,7 @@
                     on_release: root.on_list_item_release(self)
                 TwoLineListItem:
                     id: gcode_pos
-                    text: "-/- (0.00%)"
+                    text: ""
                     secondary_text: "Position in G-code"
                     font_style: info_list.font_style
                     size_hint_y: None
@@ -198,7 +198,7 @@
                     on_release: root.on_list_item_release(self)
                 TwoLineListItem:
                     id: run_time
-                    text: "00:00:00"
+                    text: ""
                     secondary_text: "Run Time"
                     font_style: info_list.font_style
                     size_hint_y: None
