--- a/kivy-rc/main.kv
+++ b/kivy-rc/main.kv
@@ -1,7 +1,9 @@
 # """--------------------------------------------------------------------------
 #   main.kv
 #
-#   Copyright (C) 2013-2021 Wilhelm Duembeg
+#   Copyright (C) 2021 Wilhelm Duembeg
+#
+#   gsatrc kivy
 #
 #   This file is part of gsat. gsat is a cross-platform GCODE debug/step for
 #   Grbl like GCODE interpreters. With features similar to software debuggers.
@@ -356,7 +358,8 @@
     #     background_disabled_normal: "images/icons/color-dis/"
         id: zero_xyz
         icon: "images/icons/color/jogging_set_to_zero_xyz_48x48.png"
-        # user_font_size: jog.button_size
+        icon_size: jog.button_size
+        # user_font_size: "64sp"
         # size_hint: (jog.button_scale, jog.button_scale)
         theme_text_color: "Custom"
         text_color: app.theme_cls.primary_color
@@ -365,11 +368,13 @@
     MDIconButton:
         id: zero_xy
         icon: "images/icons/color/jogging_set_to_zero_xy_48x48.png"
+        icon_size: jog.button_size
         # user_font_size: jog.button_size
         on_press: root.on_jog_set_axis({'x': 0, 'y': 0})
     MDIconButton:
         id: zero_z
         icon: "images/icons/color/jogging_set_to_zero_z_48x48.png"
+        icon_size: jog.button_size
         # user_font_size: jog.button_size
         on_press: root.on_jog_set_axis({'z': 0})
     MDIconButton:
@@ -381,6 +386,7 @@
         #         pos: self.pos
         #         size: self.size
         icon: "images/icons/color/jogging_home_xyz_48x48.png"
+        icon_size: jog.button_size
         # user_font_size: jog.button_size
         on_press: root.on_jog_home_axis({'x': 0, 'y': 0, 'z': 0})
         # icon: "home-circle-outline"
@@ -390,93 +396,110 @@
     MDIconButton:
         id: positive_y
         icon: "images/icons/color/jogging_pos_y_48x48.png"
+        icon_size: jog.button_size
         # user_font_size: jog.button_size
         on_press: root.on_jog_button_press('+y')
         on_release: root.on_jog_button_release('+y')
     MDIconButton:
         id: home_x
         icon: "images/icons/color/jogging_home_x_48x48.png"
+        icon_size: jog.button_size
         # user_font_size: jog.button_size
         on_press: root.on_jog_home_axis({'x': 0})
     MDIconButton:
         id: positive_z
         icon: "images/icons/color/jogging_pos_z_48x48.png"
+        icon_size: jog.button_size
         # user_font_size: jog.button_size
         on_press: root.on_jog_button_press('+z')
         on_release: root.on_jog_button_release('+z')
     MDIconButton:
         id: coolant_on
         icon: "images/icons/color/jogging_coolant_on_48x48.png"
+        icon_size: jog.button_size
         # user_font_size: jog.button_size
         on_press: root.on_jog_send_cmd("{}\n".format(root.gc.DEVICE_CMD_COOLANT_ON))
     MDIconButton:
         id: coolant_off
         icon: "images/icons/color/jogging_coolant_off_48x48.png"
+        icon_size: jog.button_size
         # user_font_size: jog.button_size
         on_press: root.on_jog_send_cmd("{}\n".format(root.gc.DEVICE_CMD_COOLANT_OFF))
     MDIconButton:
         id: probe
         icon: "images/icons/color/jogging_probe_48x48.png"
+        icon_size: jog.button_size
         # user_font_size: jog.button_size
         on_press: root.on_jog_probe("{}\n".format(root.gc.DEVICE_CMD_COOLANT_OFF))
     MDIconButton:
         id: negative_x
         icon: "images/icons/color/jogging_neg_x_48x48.png"
+        icon_size: jog.button_size
         # user_font_size: jog.button_size
         on_press: root.on_jog_button_press('-x')
         on_release: root.on_jog_button_release('-x')
     MDIconButton:
         id: go_zero_xy
         icon: "images/icons/color/jogging_goto_zero_xy_48x48.png"
+        icon_size: jog.button_size
         # user_font_size: jog.button_size
         on_press: root.on_jog_move_absolute({'x':0, 'y':0})
     MDIconButton:
         id: positive_x
         icon: "images/icons/color/jogging_pos_x_48x48.png"
+        icon_size: jog.button_size
         # user_font_size: jog.button_size
         on_press: root.on_jog_button_press('+x')
         on_release: root.on_jog_button_release('+x')
     MDIconButton:
         id: home_z
         icon: "images/icons/color/jogging_home_z_48x48.png"
+        icon_size: jog.button_size
         # user_font_size: jog.button_size
         on_press: root.on_jog_home_axis({'z': 0})
     MDIconButton:
         # Spindle CW Button
         icon: "images/icons/color/jogging_spindle_cw_48x48.png"
+        icon_size: jog.button_size
         # TODO: get spindle rpm
         # user_font_size: jog.button_size
         on_press: root.on_jog_send_cmd("{} S{:d}\n".format(root.gc.DEVICE_CMD_SPINDLE_CW_ON, root.jog_spindle_rpm))
     MDIconButton:
         # Spindle CCW Button
         icon: "images/icons/color/jogging_spindle_ccw_48x48.png"
+        icon_size: jog.button_size
         # user_font_size: jog.button_size
         # TODO: get spindle rpm
         on_press: root.on_jog_send_cmd("{} S{:d}\n".format(root.gc.DEVICE_CMD_SPINDLE_CCW_ON, root.jog_spindle_rpm))
     MDIconButton:
         # Spindle OFF Button
         icon: "images/icons/color/jogging_spindle_off_48x48.png"
+        icon_size: jog.button_size
         # user_font_size: jog.button_size
         on_press: root.on_jog_send_cmd("{}\n".format(root.gc.DEVICE_CMD_SPINDLE_OFF))
     MDIconButton:
         # Empty Spot Button
+        icon_size: jog.button_size
         # user_font_size: jog.button_size
         theme_text_color: "Custom"
         text_color: (0,0,0,0)
     MDIconButton:
         id: negative_y
         icon: "images/icons/color/jogging_neg_y_48x48.png"
+        icon_size: jog.button_size
         # user_font_size: jog.button_size
         on_press: root.on_jog_button_press('-y')
         on_release: root.on_jog_button_release('-y')
     MDIconButton:
         id: home_y
         icon: "images/icons/color/jogging_home_y_48x48.png"
+        icon_size: jog.button_size
         # user_font_size: jog.button_size
         on_press: root.on_jog_home_axis({'y': 0})
     MDIconButton:
         id: negative_z
         icon: "images/icons/color/jogging_neg_z_48x48.png"
+        icon_size: jog.button_size
         # user_font_size: jog.button_size
         on_press: root.on_jog_button_press('-z')
         on_release: root.on_jog_button_release('-z')
@@ -525,3 +548,8 @@
         size_hint_x: None
         width: self.minimum_width
         pos_hint: {'center_x': 0.5, 'center_y': 0.5}
+
+
+<IconListItem>
+    IconLeftWidget:
+        icon: root.icon
