--- a/kivy-rc/main.kv
+++ b/kivy-rc/main.kv
@@ -106,6 +106,8 @@
                     on_release: root.on_list_item_release(self)
                     IconLeftWidget:
                         icon: "images/icons/color/x.png"
+                        id: x_axis_icon
+                        on_release: root.on_list_item_release(self)
                 #TwoLineListItem:
                 OneLineAvatarIconListItem:
                     id: y_axis
@@ -117,6 +119,8 @@
                     on_release: root.on_list_item_release(self)
                     IconLeftWidget:
                         icon: "images/icons/color/y.png"
+                        id: y_axis_icon
+                        on_release: root.on_list_item_release(self)
                 OneLineAvatarIconListItem:
                     id: z_axis
                     text: dro_list.axis_text
@@ -127,6 +131,8 @@
                     on_release: root.on_list_item_release(self)
                     IconLeftWidget:
                         icon: "images/icons/color/z.png"
+                        id: z_axis_icon
+                        on_release: root.on_list_item_release(self)
                 OneLineAvatarIconListItem:
                     id: a_axis
                     text: dro_list.axis_text
@@ -137,6 +143,8 @@
                     on_release: root.on_list_item_release(self)
                     IconLeftWidget:
                         icon: "images/icons/color/a.png"
+                        id: a_axis_icon
+                        on_release: root.on_list_item_release(self)
                 OneLineAvatarIconListItem:
                     id: b_axis
                     text: dro_list.axis_text
@@ -147,6 +155,8 @@
                     on_release: root.on_list_item_release(self)
                     IconLeftWidget:
                         icon: "images/icons/color/b.png"
+                        id: b_axis_icon
+                        on_release: root.on_list_item_release(self)
                 OneLineAvatarIconListItem:
                     id: c_axis
                     text: dro_list.axis_text
@@ -157,6 +167,8 @@
                     on_release: root.on_list_item_release(self)
                     IconLeftWidget:
                         icon: "images/icons/color/c.png"
+                        id: c_axis_icon
+                        on_release: root.on_list_item_release(self)
                 OneLineAvatarIconListItem:
                     id: feed_rate
                     text: "0.00"
@@ -506,7 +518,7 @@
 
 
 
-<InputDialagoContent>
+<InputDialogContent>
     id: top
     orientation: "vertical"
     spacing: "12dp"
