Attempting to deal with android socket disconnect

--- a/kivy-rc/main.kv
+++ b/kivy-rc/main.kv
@@ -358,7 +358,7 @@
     # button_size: sp(24) #"38sp"
     # button_size: pt(24) #"38sp"
     button_size: sp(48)
-    spacing: 24
+    # spacing: 24
     size_hint:(None, None)
     width: self.minimum_width
     height: self.minimum_height
